cmake_minimum_required(VERSION 2.6)
project(forCV)
enable_language(Fortran)
option(examples "Build example programs" ON)
option(forcvMod "Build forcv module" ON)
add_subdirectory("${PROJECT_SOURCE_DIR}/src")

if(examples)
   find_package(OpenCV REQUIRED core highgui imgcodecs)
   add_subdirectory("${PROJECT_SOURCE_DIR}/example")
endif()
